data-xfer/main/default/objects/Data_Flow_Definition__c/Data_Flow_Definition__c.object-meta.xml
<CustomObject>
    <label>Data Flow Definition</label>
    <nameField>
        <label>Data Flow Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Flow Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>