data-xfer/main/default/objects/Data_Flow_Definition__c/fields/Data_Source_Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Instance_Name__c</fullName>
    <label>Data Source Instance Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>