data-xfer/main/default/objects/Data_Flow_Definition__c/fields/External_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Data_Source__c</fullName>
    <label>External Data Source</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>