data-xfer/main/default/objects/Data_Flow_Definition__c/fields/External_Object__c.field-meta.xml
<CustomField>
    <fullName>External_Object__c</fullName>
    <label>External Object</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>