data-xfer/main/default/objects/Data_Flow_Definition__c/fields/Field_Mapping_Set__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Field Mapping Set</label>
    <referenceTo>Field_Mapping_Set__c</referenceTo>
    <relationshipLabel>Data Flow Definitions</relationshipLabel>
    <relationshipName>Data_Flow_Definitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>