data-xfer/main/default/objects/Data_Flow_Definition__c/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <label>Salesforce Object</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>